<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arma Connect</string>
    <string name="downloading_maps_message">Downloading Maps</string>
    <string name="Finish_message">Finish</string>
    <string name="clear_maps_folder">Clear Maps</string>
    <string name="restart_message">Please restart the app.</string>
    <string name="menu_MapGPS">Map/GPS</string>
    <string name="menu_DateTime">Watch</string>
    <string name="menu_Weather">Weather</string>
    <string name="menu_Altimeter">Altimeter</string>
    <string name="menu_Settings">Settings</string>
    <string name="settings_keepscreenon">Keep Screen On (No Sleeping)</string>
    <string name="settings_metricunits">Use Metric Units (Over Imperial)</string>
    <string name="connecting_message">Waiting for Arma game connection&#8230;</string>
    <string name="datetime_helpmessage_GPS">Make sure you have a GPS.</string>
    <string name="datetime_helpmessage_Watch">Make sure you have a Watch.</string>
    <string name="weather_Current">Current Weather</string>
    <string name="weather_Forecast">Forecast</string>
    <string name="weather_Sky">Sky</string>
    <string name="weather_Wind">Wind</string>
    <string name="weather_Sunny">Sunny</string>
    <string name="weather_PatchyClouds">Patchy Clouds</string>
    <string name="weather_Cloudy">Cloudy</string>
    <string name="weather_Raining">Raining</string>
    <string name="weather_Storms">Storms</string>
    <string name="weather_Humidity">Humidity</string>
    <string name="weather_Fog">Fog</string>
    <string name="weather_Waves">Waves</string>
    <string name="weather_Fog_0">Clear visibility</string>
    <string name="weather_Fog_0_3">Mostly clear visibility</string>
    <string name="weather_Fog_0_7">Restricted visibility</string>
    <string name="weather_Fog_1_0">Very low visibility</string>
    <string name="weather_Waves_0">Calm seas</string>
    <string name="weather_Waves_0_3">Mostly calm seas</string>
    <string name="weather_Waves_0_7">Moderately choppy seas</string>
    <string name="weather_Waves_1_0">Extreme swells</string>
    <string name="altimeter_sea_level">-- Sea Level --</string>
    <string name="altimeter_terrain_height">Terrain Height</string>
    <string name="altimeter_seabed_depth">Seabed Depth</string>
    <string name="altimeter_height_ASL">Height ASL</string>
    <string name="altimeter_height_BSL">Height BSL</string>

    <string-array name="tips">
        <item>Tip: Tap your player icon on the map to automatically follow.</item>
        <item>Tip: The options screen allows you to set metric vs. imperial units of measurement.</item>
    </string-array>

</resources>