<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu_Settings"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textSize="26sp" />

    <CheckBox
        android:id="@+id/screenOnCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_keepscreenon"
        />

    <CheckBox
        android:id="@+id/metricUnitsCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_metricunits" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <Button
        android:id="@+id/clearMapsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_maps_folder" />


</LinearLayout>
