<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="26sp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFCCCCCC"
            />
        
        <TextView
            android:id="@+id/show_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/menu_MapGPS"
            android:textSize="20sp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFCCCCCC"
            />
        
        <TextView
            android:id="@+id/show_datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/menu_DateTime"
            android:textSize="20sp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFCCCCCC"
            />
        
        <TextView
            android:id="@+id/show_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/menu_Weather"
            android:textSize="20sp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFCCCCCC"
            />
        
        <TextView
            android:id="@+id/show_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/menu_Settings"
            android:textSize="20sp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFCCCCCC"
            />
        
    </LinearLayout>
    

</ScrollView>