<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp" >
        
	        <ImageView
	            android:id="@+id/imageWeather"
	            android:layout_width="62dp"
	            android:layout_height="62dp"
	            android:contentDescription="@string/weather_Sky"
	            android:src="@drawable/weather_clear" />
	        
	        <TextView
	            android:id="@+id/textSkyTitle"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:text="@string/weather_Sky"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        </LinearLayout>

        <TextView
            android:id="@+id/textWeather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp" >
	        
	        <ImageView
	            android:id="@+id/imageWind"
	            android:layout_width="62dp"
	            android:layout_height="62dp"
	            android:contentDescription="@string/weather_Wind"
	            android:src="@drawable/wind_direction" />
	        
	        <TextView
	            android:id="@+id/textWindTitle"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:text="@string/weather_Wind"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        
	    </LinearLayout>
        
        <TextView
            android:id="@+id/textWind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp" >
        
        <TextView
            android:id="@+id/textHumidityTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:text="@string/weather_Humidity"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/textHumidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />
            
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp" >
        
        <TextView
            android:id="@+id/textFogTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:text="@string/weather_Fog"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/textFog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />
            
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp" >
        
        <TextView
            android:id="@+id/textWavesTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:text="@string/weather_Waves"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/textWaves"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />
            
    </LinearLayout>

</LinearLayout>